[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "symmeplot"
version = "0.2.2.dev"
authors = [
  { name = "tjstienstra", email = "timostienstra00@gmail.com" },
]
description = "SymPy Mechanics Plotter"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy >=1.12",
    "numpy >=1.23",
]

[project.optional-dependencies]
mpl_backend = [
    "matplotlib >=3.7",
]
pg_backend = [
    "pyqtgraph >=0.13.3",
    "pyqt6 >=6.6.1",
    "pyopengl >=3.1.7",
]
lint = [
  "ruff >= 0.8",
]
test = [
  "pytest >=8",
  "pytest-mock >= 3.12",
]
docs = [
  "sphinx >=7.0",
  "jupyter-sphinx >=0.5",
  "autodocsumm >=0.2",
  "ipykernel >=6",
  "furo >=2024",
]

[project.urls]
"Homepage" = "https://github.com/tjstienstra/symmeplot"
"Bug Tracker" = "https://github.com/tjstienstra/symmeplot/issues"
"Documentation" = "https://tjstienstra.github.io/symmeplot/"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/symmeplot/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",   # Conflicts with formatter
  "D203",     # Conflicts D211 which enforces no blank line before class docstring
  "DTZ005",   # Specify the timezone in datetime
  "FBT",      # Booleans should be keyword arguments
  "ISC001",   # Implicitly concatenated string literals on one line (conflicts with format)
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "FIX",      # Line contains TODO/FIXME, consider resolving the issue
  "TD003",    # Missing issue link on the line following this TODO
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = [
  "A001",     # Ignore copyright shadowing
  "INP001",   # Missing __init__.py
]
"*/__init__.py" = ["D104"]
"tests/*" = [
  "ANN",      # Type hints
  "D",        # Documentation
  "S101",     # Assert statements
]
"src/symmeplot/utilities/sympy_patches.py" = ["ANN", "RUF", "D", "UP"]
"src/symmeplot/utilities/dummy_backend.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true  # Enable reformatting of code snippets in docstrings.

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
    "tests",
]

[tool.codespell]
ignore-regex = ["^.*ignore: codespell"]
